# pricefeed

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
pricefeed/: __init__.py  ticker.py
pricefeed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_ticker.py
